@@ -8,7 +8,7 @@ minecraft_version=1.18.1
 forge_version=39.0.59
 
 jei_version=1.18.1:9.1.0.44
-patchouli_version=1.18.1-61
+patchouli_version=1.18.1-64
 top_version=1.18-5.0.2-6
 mcjtylib_version=1.18-6.0.5.12
 
