@@ -1,7 +1,7 @@
 {
   "name": "Basics",
   "description": "Basic information about RFTools, including worldgen details.",
-  "parent": "category_rftoolsbase",
+  "parent": "rftoolsbase:category_rftoolsbase",
   "icon": "rftoolsbase:dimensionalshard_overworld",
   "sortnum": 10
 }
