@@ -1,7 +1,7 @@
 {
   "name": "Tools",
   "description": "Various tools exist that make your life easier for manipulating and configuring the various tech machines",
-  "parent": "category_rftoolsbase",
+  "parent": "rftoolsbase:category_rftoolsbase",
   "icon": "rftoolsbase:smartwrench",
   "sortnum": 20
 }
